--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -17,7 +17,7 @@
     "pages/addNote/addNote"
   ],
   "window": {
-    "backgroundColor": "#F6F6F6",
+    "backgroundColor": "#dfe4ea",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#2f3542",
     "navigationBarTitleText": "随手记",
